[tool.poetry]
name = "walrus-sim"
version = "0.1.0"
description = "Simulate blob storage costs using the Walrus CLI"
authors = ["Jacques Letesson <jletesson@claynosaurz.com>"]
readme = "README.md"
packages = [{ include = "walrus_sim" }]

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
tqdm = "^4.66.0"

[tool.poetry.scripts]
walrus-sim = "walrus_sim.cli:app"

[tool.poetry.group.dev.dependencies]
shiv = "^1.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
